# Generated by Django 5.2.15 on 2026-09-06 22:45

from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('ourlives', '0008_remove_appsettings_api_key'),
    ]

    operations = [
        migrations.CreateModel(
            name='CodeType',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('code', models.CharField(max_length=50, unique=True)),
                ('name', models.CharField(max_length=100, unique=True)),
                ('max_codes', models.PositiveIntegerField()),
                ('active', models.BooleanField(default=True)),
                ('description', models.TextField(blank=True)),
            ],
            options={
                'verbose_name': 'Code Type',
                'verbose_name_plural': 'Code Types',
                'ordering': ['code'],
            },
        ),
        migrations.CreateModel(
            name='ContactType',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('code', models.CharField(max_length=50, unique=True)),
                ('name', models.CharField(max_length=100, unique=True)),
                ('active', models.BooleanField(default=True)),
                ('description', models.TextField(blank=True)),
            ],
            options={
                'verbose_name': 'Contact Type',
                'verbose_name_plural': 'Contact Types',
                'ordering': ['code'],
            },
        ),
        migrations.CreateModel(
            name='Country',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('iso2', models.CharField(max_length=2, unique=True)),
                ('iso3', models.CharField(max_length=3, unique=True)),
                ('name', models.CharField(max_length=100, unique=True)),
                ('region', models.CharField(blank=True, max_length=10)),
                ('active', models.BooleanField(default=True)),
            ],
            options={
                'verbose_name': 'Country',
                'verbose_name_plural': 'Countries',
                'ordering': ['name'],
            },
        ),
        migrations.CreateModel(
            name='OrderType',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('code', models.CharField(max_length=50, unique=True)),
                ('name', models.CharField(max_length=100, unique=True)),
                ('active', models.BooleanField(default=True)),
                ('description', models.TextField(blank=True)),
            ],
            options={
                'verbose_name': 'Order Type',
                'verbose_name_plural': 'Order Types',
                'ordering': ['code'],
            },
        ),
        migrations.CreateModel(
            name='Rep',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('first_name', models.CharField(max_length=100)),
                ('last_name', models.CharField(max_length=100)),
                ('email', models.EmailField(max_length=254, unique=True)),
            ],
            options={
                'verbose_name': 'Rep',
                'verbose_name_plural': 'Reps',
                'ordering': ['last_name', 'first_name'],
            },
        ),
    ]
