# Generated by Django 5.2.15 on 2026-09-07 05:15

import django.db.models.deletion
import ourlives.models
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('ourlives', '0011_remove_currency_country_currency_countries'),
    ]

    operations = [
        migrations.AddField(
            model_name='invitationcode',
            name='code_type',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.PROTECT, related_name='invitation_codes', to='ourlives.codetype'),
        ),
        migrations.AddField(
            model_name='invitationcode',
            name='sequence',
            field=models.PositiveIntegerField(blank=True, null=True),
        ),
        migrations.AddField(
            model_name='organization',
            name='assigned_rep',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='organizations', to='ourlives.rep'),
        ),
        migrations.CreateModel(
            name='Order',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('order_number', models.CharField(default=ourlives.models.generate_order_number, max_length=50, unique=True)),
                ('is_upgrade_from_pilot', models.BooleanField(default=False)),
                ('is_referral_order', models.BooleanField(default=False)),
                ('referral_organisation', models.CharField(blank=True, max_length=255, null=True)),
                ('po_number', models.CharField(max_length=100)),
                ('number_of_scans', models.PositiveIntegerField(blank=True, null=True)),
                ('cost_per_scan', models.DecimalField(blank=True, decimal_places=2, max_digits=10, null=True)),
                ('additional_information', models.TextField(blank=True)),
                ('ip_address', models.GenericIPAddressField(blank=True, null=True)),
                ('form_entry_key', models.CharField(blank=True, max_length=100, null=True)),
                ('submitted_at', models.DateTimeField(auto_now_add=True)),
                ('hcaptcha_verified', models.BooleanField(default=False)),
                ('currency', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='orders', to='ourlives.currency')),
                ('invoice_contact', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.PROTECT, related_name='invoice_orders', to='ourlives.contact')),
                ('order_types', models.ManyToManyField(blank=True, related_name='orders', to='ourlives.ordertype')),
                ('organization', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='orders', to='ourlives.organization')),
                ('pilot_currency', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='pilot_orders', to='ourlives.currency')),
                ('primary_contact', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.PROTECT, related_name='primary_orders', to='ourlives.contact')),
                ('rep', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='orders', to='ourlives.rep')),
            ],
            options={
                'verbose_name': 'Order',
                'verbose_name_plural': 'Orders',
                'ordering': ['order_number'],
            },
        ),
        migrations.AddField(
            model_name='invitationcode',
            name='order',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.PROTECT, related_name='invitation_codes', to='ourlives.order'),
        ),
        migrations.CreateModel(
            name='OrderItem',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('quantity', models.PositiveIntegerField()),
                ('unit_price', models.DecimalField(decimal_places=2, max_digits=10)),
                ('order', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='items', to='ourlives.order')),
                ('product', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='order_items', to='ourlives.product')),
            ],
            options={
                'verbose_name': 'Order Item',
                'verbose_name_plural': 'Order Items',
            },
        ),
    ]
